# vpn-client

./: README.md  pyproject.toml
config/: wg-client.conf.template
service/: vpn-client.service
src/vpn_client/: app.py
src/vpn_client/templates/: index.html
